--- a/src/input.css
+++ b/src/input.css
@@ -43,7 +43,7 @@
 
   /* Sizes */
   .badge-sm {
-    @apply px-2 py-1 text-xs;
+    @apply px-2 py-1 text-xs rounded-md inline-block border rounded-full font-medium transition;
   }
 
   .badge-md {
@@ -65,6 +65,10 @@
 
   .badge-warning {
     @apply bg-yellow-500 text-white border-yellow-600 hover:bg-yellow-700;
+  }
+
+  .badge-info {
+    @apply bg-indigo-500 text-white border-indigo-600 hover:bg-indigo-700;
   }
 
   /* tags */
