--- a/sections/featured-product-section-1.liquid
+++ b/sections/featured-product-section-1.liquid
@@ -30,8 +30,8 @@
       {
         "type": "product",
         "id": "featured_product",
-        "label": "Featured Product",
-        "default": "apple-watch"
+        "label": "Featured Product"
+
       }
     ],
     "presets": [
