--- a/snippets/product-feature-media-template-1.liquid
+++ b/snippets/product-feature-media-template-1.liquid
@@ -26,7 +26,5 @@
     <div
       class="product-single__media"
       style="padding-top: 100%;"
-      data-media-id="{{ media.id }}">
-      {{ media | media_tag }}
-    </div>
+      data-media-id="{{ media.id }}"></div>
 {% endcase %}
