--- a/assets/tailwind.css
+++ b/assets/tailwind.css
@@ -761,6 +761,10 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.fixed {
+  position: fixed;
+}
+
 .absolute {
   position: absolute;
 }
@@ -1283,6 +1287,10 @@ video {
   --tw-bg-opacity: 0.65;
 }
 
+.bg-opacity-30 {
+  --tw-bg-opacity: 0.3;
+}
+
 .object-cover {
   -o-object-fit: cover;
      object-fit: cover;
@@ -1484,6 +1492,10 @@ video {
 
 .line-through {
   text-decoration-line: line-through;
+}
+
+.opacity-35 {
+  opacity: 0.35;
 }
 
 .shadow-md {
