--- a/sections/product-template-swatch.liquid
+++ b/sections/product-template-swatch.liquid
@@ -1,5 +1,7 @@
-<section class="product_template_2">
+{%- assign selected_variant = product.selected_or_first_available_variant -%}
 
+<section class="product_template_2">
+  swatch
   <div class="grid grid-cols-1 md:grid-cols-2 my_container gap-6 py-10">
     <div class="product_template_2_media">
       <div class="feature_media mb-4">
@@ -16,7 +18,145 @@
       </div>
     </div>
     <div class="product_template_2_form sticky top-5 ">
-     product info
+      <product-info>
+        swatch
+        <div>
+          {%- form 'product'
+            , product
+            , id: 'priduct_form'
+            , novalidate: 'novalidate' -%}
+            {% comment %} #variant_id {% endcomment %}
+            <input
+              type="number"
+              readonly
+              name="id"
+              id="{{ section.id }}_variant_id"
+              class="bg-red-100 p-1 rounded-md text-center "
+              value="{{ selected_variant.id }}">
+
+
+            <div class="mb-4">
+              <h2 class="text-2xl font-semibold">
+                {{ product.title }}
+              </h2>
+            </div>
+
+
+            <div class="mb-4">
+              <div class=" text-sm">
+                <span class="font-semibold">Vendor:</span>
+                <span class="text-sm font-semibold text-indigo-400">{{ product.vendor }}</span>
+              </div>
+            </div>
+
+            <div id="price_{{ section.id }}" class="mb-4 text-sm">
+              <span class="font-semibold">Price:</span>
+              {% if selected_variant.compare_at_price > selected_variant.price %}
+                <span class="text-sm ml-2 font-semibold line-through text-indigo-400">
+                  {{ selected_variant.compare_at_price | money_with_currency
+                  }}
+                </span>
+              {% endif %}
+              <span class="text-2xl ml-2 font-semibold text-indigo-400">
+                {{ selected_variant.price | money_with_currency
+                }}
+              </span>
+              {% if selected_variant.compare_at_price > selected_variant.price %}
+                <span class="badge-sm  badge-error">
+                  sale
+                </span>
+              {% endif %}
+            </div>
+
+            {% comment %} #product_quantity {% endcomment %}
+            <div class="mb-4 bg-gray-50 p-2">
+              Quantity: <input
+                type="number"
+                name="quantity"
+                class="border-2 p-1 rounded-sm text-center text-xl"
+                min="1"
+                value="1">
+            </div>
+            {% comment %} #variant selector {% endcomment %}
+
+            <div>
+              {%- unless product.has_only_default_variant -%}
+                <vaiant-selector data-url="{{ product.url }}" data-section="{{ section.id }}">
+                  <div class="mb-4  p-2 rounded-sm bg-gray-50 ">
+                    <h2 class="text-xl mb-2">Select Variant:</h2>
+                    {% for option in product.options_with_values %}
+                      <li class="mb-2 grid grid-cols-6 border-2 items-center justify-center rounded-sm">
+                        <label for="{{ section.id }}-{{ option.name }}-{{ forloop.index0 }}" class="font-semibold col-span-1 text-sm md:text-xl p-2 mr-2">
+                          {{ option.name }}:
+                        </label>
+                        <select
+                          class="w-full p-2 border-l-2 col-span-5"
+                          name="options[{{ option.name |  escape }}]"
+                          id="{{ section.id }}-{{ option.name }}-{{ forloop.index0 }}">
+                          {% for value in option.values %}
+                            <option
+                              {% if option.selected_value == value %}
+                              selected
+                              {% endif %}
+                              value="{{ value |  escape }}">{{ value }}</option>
+                          {% endfor %}
+                        </select>
+                      </li>
+
+                      <script type="application/json">
+                        {{ product.variants | json }}
+                      </script>
+                    {% endfor %}
+                  </div>
+                </vaiant-selector>
+              {%- endunless -%}
+            </div>
+            {% comment %} #ddescription {% endcomment %}
+
+            <div class="mb-4">
+              {{ product.description }}
+            </div>
+            {% comment %} #cart_action {% endcomment %}
+
+            {% comment %} #add_to_cart {% endcomment %}
+
+            <div id="cart_action_{{ section.id }}" class="mb-4">
+              {%- assign invertory_count_color = 'text-green-400' -%}
+              {% unless selected_variant.inventory_quantity > 10 %}
+                {%- assign invertory_count_color = 'text-red-400' -%}
+              {% endunless %}
+              {% if selected_variant.available %}
+                <div class="text-sm mb-1 font-semibold  {{ invertory_count_color }} ">
+                  {% if selected_variant.inventory_quantity < 10 %}
+                    Only
+                  {% endif %}
+                  {{ selected_variant.inventory_quantity }} items* left
+                </div>
+              {% endif %}
+              <div>
+                <button
+                  {% unless selected_variant.available %}
+                  disabled
+                  {% endunless %}
+                  type="submit"
+                  class="w-full p-4 mb-4 bg-gray-900 cursor-pointer hover:bg-gray-700 duration-75 transition-all text-center text-white">
+                  {% if selected_variant.available %}
+                    <span>
+                      Add to cart
+                    </span>
+                  {% else %}
+                    <span>Out of stock</span>
+                  {% endif %}
+                </button>
+              </div>
+              {% if selected_variant.available %}
+                {{ form | payment_button }}
+              {% endif %}
+            </div>
+          {%- endform -%}
+        </div>
+        <div class="mt-10"></div>
+      </product-info>
     </div>
   </div>
   <div id="spinner_{{ section.id }}" class="spinner hidden fixed w-full h-full bg-black top-0 left-0 bg-opacity-30">
@@ -27,13 +167,16 @@
 </section>
 
 
+<script src="{{ 'product-script-2.js' |  asset_url }}" defer></script>
+
+
 {% schema %}
   {
     "name": "Product template swatch",
     "settings": [],
     "presets": [
       {
-       "name": "Product template swatch" 
+        "name": "Product template swatch"
       }
     ]
   }
