--- a/sections/product-template-swatch.liquid
+++ b/sections/product-template-swatch.liquid
@@ -85,13 +85,24 @@
                   <div class="mb-4  p-2 rounded-sm bg-gray-50 ">
                     <h2 class="text-xl mb-2">Select Variant:</h2>
                     {% for option in product.options_with_values %}
+
                       <fieldset class="mb-2">
                         <legend class="font-semibold text-sm md:text-xl p-2 mr-2">
                           {{ option.name }}
                         </legend>
                         {% for value in option.values %}
-                          <label data-option="{{ option.name |  escape }}" data-value="{{ option.value }}">
+                          {%- assign is_selected = false -%}
+                          {%- if product.variants.first.options[forloop.parentloop.index0] == value -%}
+                            {%- assign is_selected = true -%}
+                          {%- endif -%}
+                          <label
+                            class="
+                            {% if is_selected %} selected {% endif %}
+                            swatch-level cursor-pointer border-2 border-gray-200 mx-2 rounded-full p-2"
+                            data-option="{{ option.name |  escape }}"
+                            data-value="{{ option.value }}">
                             <input
+                              class="hidden"
                               name="options[{{ option.name |  escape }}]"
                               value="{{ value }}"
                               type="radio"
@@ -167,6 +178,13 @@
   </div>
 
 </section>
+
+<style>
+  .selected {
+    background-color: black;
+    color: white;
+  }
+</style>
 
 
 <script src="{{ 'product-script-2.js' |  asset_url }}" defer></script>
